@@ -1,2 +1,3 @@
  * Fix TOTP plugin settings #878
  * Allow Emoji #796
+ * Scroll and better UI in entry edition screen #876
