@@ -1,2 +1,3 @@
  * Correction des paramètres des plugins TOTP #878
  * Autoriser les Emoji #796
+ * Défilement et amélioration de l'UI dans l'écran d'édition #876
